--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,7 @@ ul {
   scroll-behavior: smooth;
   background-color: #fff;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  text-align: center;
 }
 .bottom-buttons-wrapper {
   grid-row: 5 / span 1;
@@ -129,6 +130,13 @@ ul {
 .div6 {
   grid-area: 4 / 2 / 5 / 3;
   /* border: 1px solid red; */
+}
+.error {
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  color: tomato;
+  border: 0 3px 0;
+  border-color: red;
 }
 
 .trade-list {
