--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,7 @@ footer {
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   border-radius: 5px;
   text-align: center;
-  width: 80%;
+  width: 300px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -337,4 +337,12 @@ footer {
   display: flex;
   justify-content: flex-end;
   padding: 2.5rem;
+}
+
+.sc-embed {
+  width: 300px;
+  min-height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
